# dfir-cmake

./: .appveyor.yml  CMakeLists.txt  azure-pipelines.yml
cmake/: FindApacheOrc.cmake  FindArrow.cmake  FindBoostFilesystem.cmake  FindBoostRegex.cmake  FindBrotli.cmake  FindChakraCore.cmake  FindLZ4.cmake  FindParquet.cmake  FindThrift.cmake  FindVisualStudio.cmake  FindYara.cmake  FindZSTD.cmake  Orc.cmake  architecture.cmake  vcpkg.cmake
src/foobar/: CMakeLists.txt
